Carpeta de practica flexbox

--- a/flipcard/index.html
+++ b/flipcard/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlipCard</title>
-    <link rel="stylesheet" href="../flipcard/style.css">
+    <link rel="stylesheet" href="../flipcard/css/style.css">
 </head>
 
 <body>
@@ -14,12 +14,11 @@
         <div class="card-container">
             <div class="card">
                 <figure class="front">
-                    <h1>PRO TIER</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, perspiciatis.</p>
+                    <h1>Tortas</h1>
                 </figure>
                 <figure class="back">
-                    <h1>PRICE: $20</h1>
-                    <button>BUY</button>
+                    <h1>Precio: $800</h1>
+                    <a href="#"><button>Comprar</button></a>
                 </figure>
             </div>
         </div>
