Copia de total de archivos

--- a/flexbox2/index.html
+++ b/flexbox2/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="container-1">
         <div class="box-1">
             <h3>Box-1</h3>
@@ -24,6 +25,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
+
     <div class="container-2">
         <div class="container-2-box">
             <h3>Box-4</h3>
@@ -37,6 +39,34 @@
             <h3>Box-6</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
+    </div>
+
+    <div class="container-3">
+        <div class="container-3-box">
+            <h3>Container 7</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="container-3-box">
+            <h3>Container 8</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="container-3-box">
+            <h3>Container 9</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="container-3-box">
+            <h3>Container 10</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="container-3-box">
+            <h3>Container 11</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="container-3-box">
+            <h3>Container 12</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+
     </div>
 
 
