Desestructuracion de Objetos

--- a/typescript/index.html
+++ b/typescript/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="opcional-parameters.js"></script>
+    <script src="desestructuracion-objetos.js"></script>
 </body>
 
 </html>
